--- a/packages/open-layers/package.json
+++ b/packages/open-layers/package.json
@@ -4,8 +4,8 @@
   "description": "A collection of lower level hooks to easily integrate Open Layers into your NextJS, Remix, Vite React app",
   "type": "module",
   "scripts": {
-    "dev": "tsc --watch",
-    "build": "tsc",
+    "dev": "yarn build --watch",
+    "build": "tsc --project tsconfig.build.json",
     "lint": "eslint .",
     "preview": "vite preview"
   },
