--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo",
+  "name": "docs",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -24,10 +24,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@cloudflare/workers-types": "^4.20240512.0",
     "@remix-run/dev": "^2.11.1",
+    "@types/babel__core": "^7",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
