--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -18,10 +18,13 @@
     "@remix-run/cloudflare": "^2.11.1",
     "@remix-run/cloudflare-pages": "^2.11.1",
     "@remix-run/react": "^2.11.1",
+    "clsx": "^2.1.1",
     "isbot": "^4.1.0",
     "ol": "^10.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "shiki": "^1.14.1",
+    "ts-pattern": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
