--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/drewdecarme/react-cartography#readme",
   "dependencies": {
-    "react-cartography": "workspace:^"
+    "react-cartography": "workspace:"
   }
 }
