--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -13,44 +13,49 @@
     "typegen": "wrangler types"
   },
   "dependencies": {
-    "@linaria/core": "^6.2.0",
-    "@react-cartography/ol": "workspace:^",
-    "@remix-run/cloudflare": "^2.11.1",
-    "@remix-run/cloudflare-pages": "^2.11.1",
-    "@remix-run/react": "^2.11.1",
-    "clsx": "^2.1.1",
-    "isbot": "^4.1.0",
-    "ol": "^10.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "shiki": "^1.14.1",
-    "ts-pattern": "^5.3.1"
+    "@linaria/core": "6.2.0",
+    "@mdx-js/rollup": "3.0.1",
+    "@react-cartography/ol": "workspace:",
+    "@remix-run/cloudflare": "2.11.2",
+    "@remix-run/cloudflare-pages": "2.11.2",
+    "@remix-run/react": "2.11.2",
+    "@shikijs/rehype": "1.14.1",
+    "clsx": "2.1.1",
+    "install": "0.13.0",
+    "isbot": "5.1.17",
+    "npm": "10.8.2",
+    "ol": "10.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "shiki": "1.14.1",
+    "ts-pattern": "5.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@cloudflare/workers-types": "^4.20240512.0",
-    "@remix-run/dev": "^2.11.1",
-    "@types/babel__core": "^7",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
-    "@wyw-in-js/vite": "^0.5.4",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.1.6",
-    "vite": "^5.1.0",
-    "vite-tsconfig-paths": "^4.2.1",
-    "wrangler": "3.57.1"
+    "@babel/core": "7.25.2",
+    "@babel/preset-react": "7.24.7",
+    "@babel/preset-typescript": "7.24.7",
+    "@cloudflare/workers-types": "4.20240815.0",
+    "@remix-run/dev": "2.11.2",
+    "@types/babel__core": "7.20.5",
+    "@types/react": "18.3.4",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.2.0",
+    "@typescript-eslint/parser": "8.2.0",
+    "@wyw-in-js/vite": "0.5.4",
+    "autoprefixer": "10.4.20",
+    "eslint": "8.57.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsx-a11y": "6.9.0",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "postcss": "^8.4.41",
+    "remark-frontmatter": "5.0.0",
+    "rollup": "^4.21.0",
+    "typescript": "5.5.4",
+    "vite": "5.4.2",
+    "vite-tsconfig-paths": "5.0.1",
+    "wrangler": "3.72.1"
   },
   "engines": {
     "node": ">=20.0.0"
