--- a/packages/open-layers/package.json
+++ b/packages/open-layers/package.json
@@ -19,23 +19,18 @@
     }
   },
   "dependencies": {
-    "ol": "^10.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "ol": "10.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
-    "@types/node": "^22.3.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.8.0",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.0",
-    "vite": "^5.4.0",
-    "vite-plugin-externalize-deps": "^0.8.0"
+    "@types/node": "22.4.2",
+    "@types/react": "18.3.4",
+    "@types/react-dom": "18.3.0",
+    "eslint": "8.57.0",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-refresh": "0.4.10",
+    "typescript": "5.5.4",
+    "typescript-eslint": "8.2.0"
   }
 }
